drone sınıfı oluşturuldu, drone bilgilerinin anlık güncellenmesi eklendi

--- a/SwarmController/SwarmController.csproj
+++ b/SwarmController/SwarmController.csproj
@@ -96,6 +96,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Markers\DroneMarker.xaml.cs">
+      <DependentUpon>DroneMarker.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Swarm\Drone.cs" />
     <Compile Include="ViewModels\LogViewModel.cs" />
     <Compile Include="ViewModels\ViewModelBase.cs" />
     <Page Include="MainWindow.xaml">
@@ -111,6 +115,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Markers\DroneMarker.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Markers\MissionItemMarker.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -167,6 +175,9 @@
       <Project>{4d945a93-d46d-4140-bb68-c30c7c46352c}</Project>
       <Name>MAVLink</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\drone.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
