drone bağlı olmasa da programın açılması eklendi, genel değişiklikler yapıldı

--- a/SwarmController/SwarmController.csproj
+++ b/SwarmController/SwarmController.csproj
@@ -179,6 +179,9 @@
   <ItemGroup>
     <Resource Include="Resources\drone.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\cats.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
