drone card düzenlemeler

--- a/SwarmController/SwarmController.csproj
+++ b/SwarmController/SwarmController.csproj
@@ -194,6 +194,9 @@
   <ItemGroup>
     <Resource Include="Resources\cats.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\hss.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
