--- a/SwarmController/SwarmController.csproj
+++ b/SwarmController/SwarmController.csproj
@@ -214,6 +214,12 @@
   <ItemGroup>
     <Resource Include="Resources\hss.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\itu_logo.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\tr_flag.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
