+ Alan tarama algoritmaı eklendi. + Alan tarama için arka plan düzenlemeleri yapıldı. + Alan tarama için Gui'de düzenlemeler yapıldı. - Alan tarama için marker dosyaları oluşturuldu ancak EKSİK var, survailence markerı kullanılıyor.

--- a/SwarmController/SwarmController.csproj
+++ b/SwarmController/SwarmController.csproj
@@ -108,6 +108,7 @@
     </Compile>
     <Compile Include="Models\LogManager\LogManager.cs" />
     <Compile Include="Models\Plan\MissionKamikaze.cs" />
+    <Compile Include="Models\Plan\MissionScan.cs" />
     <Compile Include="Models\Swarm\Drone.cs" />
     <Compile Include="ViewModels\DroneInfoCardListViewModel.cs" />
     <Compile Include="ViewModels\DroneInfoCardViewModel.cs" />
